--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -14,14 +14,14 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7210;http://localhost:5210",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development" //Production
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development" //Production
       }
     }
   }
